Append remaining files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   
   <body>
-      <h1>"Hello, Github Actions!"</h1>
+      <h1>"Hello, Github Actions!, Lets go there"</h1>
   </body>
 </html>
